--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "next": "12.3.0",
     "next-redux-wrapper": "^8.0.0",
