--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-redux": "^8.0.4",
+    "react-responsive-carousel": "^3.2.23",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1"
