--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.0",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
