--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "iron-session": "^6.2.1",
     "next": "12.3.0",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
