--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "bootstrap-daterangepicker": "^3.1.0",
     "i18next": "^21.9.2",
     "iron-session": "^6.2.1",
     "moment": "^2.29.4",
@@ -37,5 +38,5 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0"
   },
-  "proxy": "http://kk-lotto.com" 
+  "proxy": "http://kk-lotto.com"
 }
