--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.4.0",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
