--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "next": "12.3.0",
     "next-redux-wrapper": "^8.0.0",
+    "nextjs-progressbar": "^0.0.15",
     "react": "18.2.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-data-table-component": "^7.5.3",
