--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "localhost": "next dev",
+    "staging": "next -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
