--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
