--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "localhost": "next dev",
     "staging": "next -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next -p 80",
     "lint": "next lint"
   },
   "dependencies": {
