--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-i18next": "^11.18.6",
+    "react-idle-timer": "^5.4.2",
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
