--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "localhost": "next dev",
-    "staging": "next -p 80",
+    "staging": "next -p 81",
+    "live": "next -p 80",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
