--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-data-table-component": "^7.5.3",
+    "react-date-picker": "^9.0.0",
     "react-datepicker": "^4.8.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
