--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "next dev",
     "localhost": "next dev",
     "staging": "next -p 81",
+    "stagingbuild": "next start -p 81",
     "live": "next -p 80",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 81",
     "lint": "next lint"
   },
   "dependencies": {
